--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <meta property="og:title" content="Text to Handwriting" />
     <meta
       property="og:url"
-      content="https://saurabhdaware.github.io/text-to-handwriting"
+      content="https://github.com/rounakc2k/Speech-text-to-handwritten-text"
     />
     <meta
       property="og:description"
@@ -197,16 +197,6 @@
                 <br />
               </div>
 
-              <div>
-                <button
-                  id="draw-diagram-button"
-                  type="button"
-                  style="font-size: 0.9rem; margin-top: 5px;"
-                  class="draw-button"
-                >
-                  Draw <small>(Beta)</small>
-                </button>
-              </div>
             </div>
 
             <div class="customization-col">
@@ -215,8 +205,7 @@
                 <b>Customizations</b> <small>(Optional)</small>
                 <p style="font-size: 0.8rem;">
                   <em
-                    >Note: Few changes may reflect only in the generated image
-                    and not in the preview</em
+                    >Customize your text here</em
                   >
                 </p>
               </div>
@@ -422,7 +411,7 @@
       <section>
         <h2 id="output-header">Output</h2>
         <div id="output" class="output" style="text-align: center;">
-          Click "Generate Image" Button to generate new image.
+          Click "Generate Image" Button to generate the page.
         </div>
         <div style="text-align: center; padding: 30px;">
           <button class="imp-button" id="download-as-pdf-button">
@@ -435,7 +424,7 @@
       </section>
 
       <section id="how-to-add-handwriting">
-        <h2>🤓 Guide to add your own handwriting</h2>
+        <h2>Guide to add your own handwriting</h2>
         <div>
           <ul>
             <li>
@@ -460,54 +449,7 @@
         </div>
       </section>
 
-      <section id="sponsors">
-        <h2>🤗 Sponsors</h2>
-        <p>
-          This tool is completely free and neither stores any of your data for
-          money so maybe you can consider being patron or making an one time
-          payment with buy me a coffee to help sustain 🤗
-        </p>
-        <div class="sponsor-name-section">
-          <a href="https://abelljs.org" class="sponsor-container">
-            <img width="150" src="https://abelljs.org/static/icons/abell.svg" />
-            <span class="sponsor-title">Abell.js</span>
-          </a>
-        </div>
-        <p>
-          <a href="https://www.patreon.com/bePatron?u=31891872">
-            <img
-              loading="lazy"
-              style="border-radius: 4px;"
-              alt="Buy me a Coffee Button"
-              width="200"
-              src="https://c5.patreon.com/external/logo/become_a_patron_button.png"
-            />
-          </a>
-          &nbsp;
-          <a href="https://www.buymeacoffee.com/saurabhdaware">
-            <img
-              loading="lazy"
-              style="border-radius: 4px;"
-              alt="Buy me a Coffee Button"
-              width="200"
-              src="https://cdn.buymeacoffee.com/buttons/default-yellow.png"
-            />
-          </a>
-        </p>
-      </section>
-
-      <section id="github-contributors">
-        <h2>👫 GitHub Contributors</h2>
-        <div class="project-contributors" id="project-contributors"></div>
-        <div style="padding: 20px 5px;">
-          Text-to-Handwriting is an open-source tool built with HTML, CSS, and
-          JavaScript! <br />You can check out
-          <a
-            href="https://github.com/saurabhdaware/text-to-handwriting/blob/master/CONTRIBUTING.md"
-            >CONTRIBUTING.md on GitHub</a
-          >, if you want to contribute.
-        </div>
-      </section>
+      
 
       <section id="faq">
         <h2>❓ FAQs (Frequently Asked Questions)</h2>
@@ -530,30 +472,10 @@
             >
           </p>
         </div>
-        <div>
-          <h3>3. There are gaps between letters in custom fonts</h3>
-          <p>
-            This is a known issue that we haven't figured out the solution for.
-            As a temporary workaround, there is letter spacing and word spacing
-            option to adjust the gap.
-          </p>
-        </div>
       </section>
     </main>
     <footer style="padding: 40px 0px 10px 0px;">
-      Thank you for using Text to Handwriting! If you have any
-      questions/suggestions/feedback, you can drop me a message on
-      <a href="https://twitter.com/saurabhcodes">Twitter @saurabhcodes</a>
-      <br /><br />Do star the
-      <a href="https://github.com/saurabhdaware/text-to-handwriting"
-        >Text-to-Handwriting GitHub Repository</a
-      >
-      and If you're using it for writing assignments, make sure you use it at
-      your own risk and If it fails and your teacher catch this tool, ask them
-      to star my GitHub as well :D <br />
-      <br />byeeee! <br /><br />
-      ~ Saurabh (<a href="https://saurabhdaware.in">https://saurabhdaware.in</a
-      >)
+      Thank you for using Speech/Text to Handwriting text conversion !
     </footer>
 
     <!-- Fixed Elements -->
