--- a/index.html
+++ b/index.html
@@ -180,8 +180,11 @@
                     alert("Copied the text: " + copyText.value);
                         }
                 </script>
-                
+                <div>
+                <p>
                 <label class="block" for="note">Type/Paste text here</label>
+                </p>
+                </div>
               </div>
 
               <div class="flex-1 page-container">
