--- a/index.html
+++ b/index.html
@@ -122,7 +122,13 @@
             <li>
               Click in the speech recognition dialog box to enter your speech and the text will be generated.
               <li>
-              Copy the text generated and paste it in the ruled sheet where the text will be converted into handwritten text.
+              Copy the text generated through speech by clicking on the copy button and paste it (ctrl + V) in the ruled sheet where the text will be converted into handwritten text. 
+                <li>
+                Place the cursor on the sheet accordingly wherever adding or editing text.
+                 <li>
+                  Text can be entered manually into the sheet through typing into the keyboard too
+            </li>
+            </li>
             </li>
             </li>
           </ul>
@@ -145,7 +151,7 @@
               <body>
                   <!-- Input area -->
                   <label for="Speech Recognition">Speech Recognition</label>
-                  <input type="text" name="" id="speechToText" placeholder="Speak Something" onclick="record()">
+                  <input type="text" name="" id="speechToText" placeholder="Click here and start talking" onclick="record()">
               
                   <!-- Below is the script for voice recognition and conversion to text-->
                   <script>
@@ -195,24 +201,7 @@
                   <div class="display-flex left-margin-and-content">
                     <div contenteditable="true" class="left-margin"></div>
                     <div class="paper-content" id="note" contenteditable="true">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                      Ut rhoncus dui eget tortor feugiat iaculis. Morbi et dolor
-                      in felis viverra efficitur. Integer id laoreet arcu.
-                      Mauris turpis nibh, scelerisque sed tristique non,
-                      hendrerit in erat. Duis interdum nisl risus, ac ultrices
-                      ipsum auctor at. Aliquam faucibus iaculis metus sit amet
-                      tincidunt. Vestibulum cursus urna vel nunc imperdiet
-                      suscipit. Ut eu augue egestas, porta orci lobortis,
-                      pharetra orci. Morbi eu tellus quis nisi tempor accumsan
-                      nec eu urna. empor, ullamcorper tortor. Mauris quis
-                      fermentum augue. Phasellus ac nisl hendrerit, fringilla
-                      enim aliquam, placerat odio. Ut tortor nisi, pellentesque
-                      sed nisi at, hendrerit imperdiet turpis. Proin interdum
-                      porttitor metus at hendrerit. Proin ipsum nisl, lacinia
-                      vitae purus ullamcorper, maximus convallis sem. Sed nec
-                      lacinia lorem. Duis arcu metus, cursus non odio quis,
-                      tincidunt tempor augue. Donec eget vestibulum risus.
-                      Nullam blandit quis est vitae feugiat.
+                      (Paste your text here or type your own input).                                   
                     </div>
                   </div>
                   <div class="overlay"></div>
@@ -466,7 +455,7 @@
             </li>
             <li>
               Once you get .ttf file of your handwriting, upload it from 'Upload
-              your handwriting font' button in customizations sections
+              your handwriting font' button in customizations sections and select your .ttf file
             </li>
           </ul>
         </div>
@@ -495,10 +484,19 @@
             >
           </p>
         </div>
+        <div>
+          <h3>3. How to put two or more handwritings to one page ?</h3>
+          <p>
+            You cannot add two different handwriting to one page . 
+            You can add two different handwritings to two different pages . Do not forget to generate your page image before changing the handwriting.
+          </p>
+        </div>
+        
       </section>
     </main>
     <footer style="padding: 40px 0px 10px 0px;">
-      Thank you for using Speech/Text to Handwriting text conversion !
+      Thank you for using Speech/Text to Handwriting text conversion software! 
+      Upload your own handwriting or pick from the exisiting handwriting fonts and enjoy !
     </footer>
 
     <!-- Fixed Elements -->
