--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
                 Place the cursor on the sheet accordingly wherever adding or editing text.
                  <li>
                   Text can be entered manually into the sheet through typing into the keyboard too
+                   <li>
+                     You can customize and edit the text and the sheet of paper according to your needs from the customizations options given below.
+            </li>
             </li>
             </li>
             </li>
