--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                       >
                         Homemade Apple
                       </option>
-                      <option value="Hindi_Font">Kruti-dev(Hindi)</option>
+                      
                       <option
                         style="font-family: 'Caveat', cursive; font-size: 13pt;"
                         value="'Caveat', cursive"
@@ -231,6 +231,9 @@
                       >
                         Liu Jian Mao Cao
                       </option>
+                      <option value="Quirlycues_Font">Kruti-dev(Hindi)</option>
+                      <option value="Hindi_Font">Kruti-dev(Hindi)</option>
+                      <option value="Bengali_Font">Kruti-dev(Hindi)</option>
                     </select>
                   </div>
                   <div class="upload-handwriting-container">
