--- a/index.html
+++ b/index.html
@@ -231,9 +231,10 @@
                       >
                         Liu Jian Mao Cao
                       </option>
-                      <option value="Quirlycues_Font">Kruti-dev(Hindi)</option>
+                     
+                      <option value="Quirlycues_Font">Quirlycues</option>
                       <option value="Hindi_Font">Kruti-dev(Hindi)</option>
-                      <option value="Bengali_Font">Kruti-dev(Hindi)</option>
+                      <option value="Bengali_Font">Bangla</option>
                     </select>
                   </div>
                   <div class="upload-handwriting-container">
