--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
                       >Handwriting Font</label
                     >
                     <select id="handwriting-font">
+                      <option value="Times_New_Roman_Font">Times New Roman</option>
                       <option
                         selected
                         style="font-family: 'Homemade Apple';"
